--- a/style.css
+++ b/style.css
@@ -11,14 +11,14 @@ body {
     height: 100vh;
 }
 
-.container {
+main {
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.container img {
+main img {
     width: 100%;
 }
 
@@ -127,7 +127,7 @@ body {
         background-color: hsl(234, 29%, 20%);
     }
 
-    .container {
+    main {
         width: fit-content;
         height: fit-content;
         background-color: white;
@@ -140,7 +140,7 @@ body {
         max-height: 900px;
     }
 
-    .container img {
+    main img {
         width: 50vmin;
         min-width: 325px;
         min-height: 475px;
