--- a/success-style.css
+++ b/success-style.css
@@ -11,7 +11,7 @@ body {
     height: 100vh;
 }
 
-.container {
+main {
     width: 100%;
     height: 100%;
     padding: 50px 20px;
@@ -19,18 +19,18 @@ body {
     grid-template-rows: repeat(7, 1fr);
 }
 
-.container img {
+main img {
     grid-row-start: 2;
     margin: auto 0;
 }
 
-.container h1 {
+main h1 {
     font-weight: 700;
     font-size: 3rem;
     grid-row-start: 3;
 }
 
-.container p {
+main p {
     font-size: 1rem;
     font-weight: 400;
     grid-row-start: 4;
@@ -41,7 +41,7 @@ body {
     font-weight: 700;
 }
 
-.container button {
+main button {
     height: fit-content;
     align-self: flex-end;
     border: none;
@@ -54,8 +54,8 @@ body {
     grid-row-start: 7;
 }
 
-.container button:hover,
-.container button:active {
+main button:hover,
+main button:active {
     background: linear-gradient(to right, #c7415b, hsl(4, 100%, 67%));
 }
 
@@ -67,7 +67,7 @@ body {
         background-color: hsl(234, 29%, 20%);
     }
 
-    .container {
+    main {
         width: 50vmin;
         height: 50vmin;
         min-width: 400px;
@@ -82,23 +82,23 @@ body {
         grid-template-rows: 1fr 1fr 1fr 1fr;
     }
 
-    .container img {
+    main img {
         grid-row-start: 1;
         height: 70%;
         margin-top: 0;
     }
 
-    .container h1 {
+    main h1 {
         grid-row-start: 2;
     }
 
-    .container p {
+    main p {
         grid-row-start: 3;
         padding: 5% 0 5% 0;
         margin: auto 0;
     }
 
-    .container button {
+    main button {
         width: 100%;
         height: fit-content;
         ;
